Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-31311

Qt Creator Android Setup Wizard installs wrong ndk and build tools version

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • None
    • Qt Creator 14.0.0
    • Android Support
    • None
    • Android
    • 97187d4a5 (master)

      When using Qt Creator 14.0.0 exclusively with Qt 6.7.2 (no other Qt version installed; development host is Linux), the Qt Creator insists on installing the "Android Build-Tools version 31.0.0" and the "NDK version 25.1.8937393." As explained in https://doc.qt.io/qt-6/android-getting-started.html, the correct versions are Build-Tools 34.0.0 and NDK 26.1.10909125. This is a critical issue because Android binaries compiled with the wrong NDK will typically crash, rendering Qt Creator unusable for Android development.

      This issue has been reported multiple times [cf. https://bugreports.qt.io/browse/QTCREATORBUG-30404] and declared closed, but the problem persists. As has been reported multiple times in the community, cf. https://forum.qt.io/topic/115302/why-qt-creator-4-12-1-installs-an-old-ndk-21-1-6352462/5 from the year 2020, the problem is in the file

      ./Tools/QtCreator/share/qtcreator/android/sdk_definitions.json

      where wrong default values are listed.

        For Gerrit Dashboard: QTCREATORBUG-31311
        # Subject Branch Project Status CR V

            portale Alessandro Portale
            skebekus Stefan Kebekus
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes