Android: Remove default platform SDK requirements

Certain Android SDK and NDK version combinations are well tested by Qt.
However, these combinations are included in a Qt installation from 6.5,
so the default suggestion is removed to avoid Creator giving a bad or
outdated suggestion on what NDK to install. Connected parsing and
processing code is also removed.

Fixes: QTCREATORBUG-31311
Task-number: QTCREATORBUG-30404
Change-Id: Ie0fc6cc71e9ec1a720b6182bffc97da996366c4c
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>